--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="site/index.html">Wiki</a></li>
 <!--          <li><a href="#" class="youtube"><i class="icofont-youtube"></i></a>-->
         </ul>
       </nav><!-- .nav-menu -->
       </div>
-
 
 
       <div class="header-social-links">
